...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskI
                                <rect key="frame" x="30" y="197" width="354" height="41"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="txR-BK-0ic">
                                <rect key="frame" x="30" y="253" width="354" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="DdL-p6-tFI"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                            </textField>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="D0M-ty-CVP">
                                <rect key="frame" x="335" y="341" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="PassSwitch"/>
                            </switch>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xaV-rQ-WTr">
                                <rect key="frame" x="30" y="402" width="354" height="50"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137254901957" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="u0T-D0-q8j"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="onLoginTapped:" destination="3jg-89-CeO" eventType="touchUpInside" id="7Hb-4n-n1Y"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="30" y="460" width="354" height="50"/>
                                <color key="backgroundColor" red="1" green="0.79450747580000003" blue="0.78867178250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="fDv-DP-bqU"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <state key="normal" title="New User">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="Hn0-gX-bzg" kind="presentation" identifier="NewUser" id="MfZ-q2-lHF"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" identifier="LoginView"/>
                        <constraints>
                            <constraint firstItem="rkT-YG-2qM" firstAttribute="trailing" secondItem="txR-BK-0ic" secondAttribute="trailing" constant="30" id="1kA-xJ-gLi"/>
                            <constraint firstItem="hC2-6V-pLo" firstAttribute="top" secondItem="rkT-YG-2qM" secondAttribute="top" constant="10" id="9a7-37-h2a"/>
                            <constraint firstItem="D0M-ty-CVP" firstAttribute="top" secondItem="dVb-Id-tic" secondAttribute="bottom" constant="4" id="9zQ-F7-CYm"/>
                            <constraint firstItem="xaV-rQ-WTr" firstAttribute="top" secondItem="dVb-Id-tic" secondAttribute="bottom" constant="65" id="A0v-40-ctq"/>
                            <constraint firstItem="txR-BK-0ic" firstAttribute="leading" secondItem="rkT-YG-2qM" secondAttribute="leading" constant="30" id="B56-iW-LxF"/>
...
