...
                                        </connections>
                                    </tableView>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <accessibility key="accessibilityConfiguration" identifier="CountryInfoView"/>
                        <constraints>
                            <constraint firstItem="PmO-Ie-cXY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="0Fx-iR-LMX"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="UYh-3e-An0" secondAttribute="trailing" constant="30" id="79p-Il-PYu"/>
                            <constraint firstItem="UYh-3e-An0" firstAttribute="top" secondItem="PmO-Ie-cXY" secondAttribute="bottom" constant="30" id="83R-8c-Kq7"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PmO-Ie-cXY" secondAttribute="trailing" constant="30" id="SIM-lS-rpb"/>
                            <constraint firstItem="PmO-Ie-cXY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="X0y-LM-yZe"/>
...
